--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaAppStock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsoup-1.9.2.jar=src\\YahooFinance\\jsoup-1.9.2.jar
+file.reference.jsoup-1.9.2.jar-1=jsoup-1.9.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsoup-1.9.2.jar}:\
+    ${file.reference.jsoup-1.9.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
