--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jean Pierre Patzlaff\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.jsoup-1.9.2.jar=C:\\Users\\jean.patzlaff\\Documents\\Desenvolvimento\\NetBeans\\JavaAppStock\\jsoup-1.9.2.jar
+user.properties.file=C:\\Users\\jean.patzlaff\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
